--- a/paper/Kapitel/projektbeschreibung.tex
+++ b/paper/Kapitel/projektbeschreibung.tex
@@ -1,6 +1,6 @@
 \section{Projektbeschreibung}
 \subsection{Motivation}
-In diesem Projekt soll eine selbstgebaute Dezimal-Binär-Uhr hergestellt werden. Diese soll mit Batterien und nicht mit Strom betrieben werden, da solche Uhren noch nicht existieren. Hinzu kommt, dass solch eine Uhr energiesparend und kabellos ist. Die Anzeige soll aus einem selbstgebauten Flüssigkristalldisplay (Liquid Crystal Display, LCD) bestehen. 
+In diesem Projekt soll eine selbstgebaute Dezimal-Binär-Uhr (Binary Coded Decimal - BCD) hergestellt werden. Diese soll mit Batterien und nicht mit Strom betrieben werden, da solche Uhren noch nicht existieren. Hinzu kommt, dass solch eine Uhr energiesparend und kabellos ist. Die Anzeige soll aus einem selbstgebauten Flüssigkristalldisplay (Liquid Crystal Display, LCD) bestehen. 
 
 \subsection{Spezifikationen}
 Die Uhr sollte folgende Eigenschaften aufweisen:
