--- a/paper/Kapitel/ausblick.tex
+++ b/paper/Kapitel/ausblick.tex
@@ -1,17 +1,17 @@
 \section{Ausblick und Erweiterungen}
 
-Dieses Kapitel soll einen Ausblick geben, wie die Uhr verbessert und erweitert werden kann. Außerdem sind Ideen aufgeführt wo selbstgebaute LCDs noch Hilfreiche sein können.
+Dieses Kapitel soll einen Ausblick geben, wie die Uhr verbessert und erweitert werden kann. Außerdem sind Ideen aufgeführt, in welchen Bereichen selbstgebaute LCDs noch hilfreich sein können.
 
 \subsection{Verbesserungsmöglichkeiten}
 
-Um rechtzeitig die Batterie wechseln zu können wäre eine Anzeige denkbar, die als Bild eine leere Batterie anzeigt. Mithilfe der Spannung der Batterie kann die Batterieladung bestimmt werden und ist ein Indikator, wann die Batterien gewechselt werden müssen.
+Um rechtzeitig die Batterie wechseln zu können, wäre eine Anzeige denkbar, die als Bild eine leere Batterie anzeigt. Mithilfe der Spannung der Batterie kann die Batterieladung bestimmt werden und ist ein Indikator, wann die Batterien gewechselt werden müssen.\\
 
-Des Weiteren ist denkbar die Uhr um ein Funkuhrmodul zu erweitern, sodass die Uhrzeit nicht manuell eingestellt werden muss.
+Des Weiteren ist denkbar, die Uhr um ein Funkuhrmodul zu erweitern, sodass die Uhrzeit nicht manuell eingestellt werden muss.\\
 
-Motiviert bei einem Standardwecker mit LCD kann ein DC-DC Spannunswandler eingesetzt werden, um die Uhr mit lediglich einer Batterie betreiben zu können. Somit besteht die Möglichkeit die Größe der Uhr zu verkleinern.
+Motiviert durch ein Standardwecker mit LCD, kann ein DC-DC Spannunswandler eingesetzt werden, um die Uhr mit lediglich einer Batterie betreiben zu können. Somit besteht die Möglichkeit, die Größe der Uhr zu verkleinern.
 
 \subsection{Weitere Anwendungen}
 
-Eine Möglichkeit wäre es, eine Anzeige für eine selbstgebaute Wetterstation zu designen.
+Eine Möglichkeit wäre es, eine Anzeige für eine selbstgebaute Wetterstation zu designen.\\
 
-Eine weitere Idee ist es ein Spiel zu entwerfen und ein angepasstes Display dazu zu erstellen.
+Eine weitere Idee ist es, ein Spiel zu entwerfen und ein angepasstes Display dazu zu erstellen.
