--- a/paper/Kapitel/dankesworte.tex
+++ b/paper/Kapitel/dankesworte.tex
@@ -1,7 +1,7 @@
 \section{Danksagung}
 
-Ein großes umfangreiches Projekt wie dieses ist natürlich nicht alleine realisierbar. Wir hatten viele freundliche Mithelfer die uns jederzeit mit Tat und Rat zur Seite standen.
+Ein großes umfangreiches Projekt wie dieses ist natürlich nicht alleine realisierbar. Wir hatten viele freundliche Mithelfer, die uns jederzeit mit Tat und Rat zur Seite standen.\\
 
-An erster Stelle danken wir unserem 5. Teammitglied Markus Walther. Er hat uns vor allem mit seinem chemischen Wissen unterstützt und hat viele Stunden in unserem Projekt mitgearbeitet. Außerdem stand er immer bereit um Fragen zu klären.
+An erster Stelle danken wir unserem 5. Teammitglied Markus Walther. Er hat uns vor allem mit seinem chemischen Wissen unterstützt und hat viele Stunden in unserem Projekt mitgearbeitet. Außerdem stand er immer bereit, um Fragen zu klären.\\
 
-Zu guter letzt danken wir dem ganzen FAUFabLab Team für die Unterstützung bei der Durchführung unserer Arbeiten. Zudem standen sie uns jederzeit mit konstruktiven Antworten auf unsere Fragen zur Verfügung.
+Zu guter Letzt danken wir dem ganzen FAUFabLab Team für die Unterstützung bei der Durchführung unserer Arbeiten. Zudem standen sie uns jederzeit mit konstruktiven Antworten auf unsere Fragen zur Verfügung.
