--- a/paper/Kapitel/introBlock.tex
+++ b/paper/Kapitel/introBlock.tex
@@ -1,7 +1,7 @@
 %
 % paper title
 % can use linebreaks \\ within to get better formatting as desired
-\title{ABC - an Amazing Binary Clock with a LCD Display}
+\title{ABC - an Amazing Binary Clock with LCD}
 
 
 % author names and affiliations
