--- a/paper/Kapitel/projektbeschreibung.tex
+++ b/paper/Kapitel/projektbeschreibung.tex
@@ -1,13 +1,13 @@
 \section{Projektbeschreibung}
 \subsection{Motivation}
-In diesem Projekt soll eine selbstgebaute Dezimal-Binär-Uhr hergestellt werden. Diese soll mit Batterien und nicht mit Strom betrieben werden, da solche Uhren noch nicht existieren. Hinzu kommt, dass solch eine Uhr energiesparend und kabellos ist. Die Anzeige soll aus einem selbstgebauten Flüssigkristalldisplay (Liquid Crystal Display, LCD) bestehen. 
+In diesem Projekt soll eine selbstgebaute Dezimal-Binär-Uhr hergestellt werden. Diese soll mit Batterien und nicht mit Strom betrieben werden, da solche Uhren noch nicht existieren. Hinzu kommt, dass solch eine Uhr energiesparend und kabellos ist. Die Anzeige soll aus einem selbstgebauten Flüssigkristalldisplay (Liquid Crystal Display, LCD) bestehen. Angesteuert wird der Display über einen Microcontroller. Zwei Buttons werden verbaut, um die Uhr Minutengenau einstellen zu können.
 
 \subsection{Spezifikationen}
 Die Uhr sollte folgende Eigenschaften aufweisen:
 \begin{itemize}
 \item Anzeige der Uhrzeit in einem Dezimal-Binär-Code (binäre Darstellung der Dezimalstellen)
-\item ....?
-
+\item Energiearmer Verbauch mit Batterien
+\item Ansteuerung durch Microcontroller
 \end{itemize}
 
 \subsection{Produktionsschritte}
