genauere beschreibung lcd eingefuegt

--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -8,11 +8,12 @@
   \label{lcdaufbau}
 \end{figure}
 
-Das Display besteht aus zwei zusammengeklebten Glasplatten mit einem Abstand von circa 10 Mikrometer. Auf den Glasplatten befinden sich leitende Schichten aus Indium-Zinn-Oxid. Diese Schichten werden später zur Darstellung von Zeichen verwendet. Grundsätzlicher Aufbau eines LCD Displays besteht aus folgenden Teilen(siehe Abbildung \ref{lcdaufbau}):
+Das Display besteht aus zwei zusammengeklebten Glasplatten mit einem Abstand von circa 10 Mikrometer. Auf den Glasplatten befinden sich leitende Schichten aus Indium-Zinn-Oxid. Diese Schichten werden später zur Darstellung von Zeichen verwendet. Grundsätzlicher Aufbau eines LCD Displays besteht aus folgenden Teilen (siehe Abbildung \ref{lcdaufbau}):
 \begin{itemize}
-\item zwei Glasplatten, die sich gegenüber liegende Innenseiten jeweils mit leitender Schicht bezogen 
-\item zwischen den Glasplatten: Flüssigkristall
-\item außerhalb der Glasplatten: Polarisationsfolien
+\item zwei Glasplatten, die sich gegenüber liegende Innenseiten jeweils mit leitender Schicht bezogen (Markierung 2 und 4)
+\item zwischen den Glasplatten: Flüssigkristall (Markierung 3)
+\item außerhalb der Glasplatten: Polarisationsfolien (Markierung 1 und 5)
+\item Ein Refelektor am Ende (Markierung 6)
 \end{itemize}
 Die Glasplatten werden so präpariert, dass die zigarrenförmige Moleküle auf jeweils einer Glasplatte in eine Richtung zeigen, auf der gegenüberliegenden Seite sind sie um 90 Grad gedreht. Flüssigkristall beschreibt somit eine “Schraubenstruktur”. Diese verschraubte Struktur veranlasst polarisiertes Licht, ihr zu folgen. Ohne Spannung wird Polarisationsebene um 90 Grad gedreht  und das Licht wird durchgelassen. Beim Anlegen von Spannung (ca. 3V Wechselspannung -> siehe Kapitel \ref{sec:elektronik}): Moleküle richten sich kollektiv senkrecht zu Elektroden aus, also existiert für das Polarisationslicht somit keine Schraubenstruktur mehr. Folglich wird beim Durchgang durch die Zelle der Polarisationszustand nicht beeinflusst, was schließlich dazu führt, dass die Bereiche dunkel erscheinen (Quellen: Bauanleitung und https://www.cmb-systeme.de/technikwissen/aufbau-und-funktion-einer-lcd-zelle)
 
