--- a/paper/Kapitel/abstract.tex
+++ b/paper/Kapitel/abstract.tex
@@ -1,10 +1,7 @@
 \begin{abstract}
   % 
-We are awesome.
+Diese Paper ist im Zuge der DIY Vorlesung an der Friedrich-Alexander-Universität Erlangen-Nürnberg entstanden und beschreibt die Herstellung einer Binäruhr mit einem LCD Display. Detailliert beschrieben und mit vielen Erfahrungen erweitert ist vor allem der Beitrag zur Herstellung eines Flüssigkristalldisplays. So haben wir verschiedene Ansätze zur Elektrodenkstrukturierung und Oxidierung der leitend beschichteten Glasplatten getestet. Eine Testplatine zur Ansteuerung des Displays wurde ebenfalls erstellt. Im weiteren Verlauf müssen die Elektronik getestet, das Programm geschrieben und ein Gehäuse hergestellt werden.
 
-Diese Paper ist im Zuge der DIY Vorlesung an der Friedrich-Alexander-Universität entstanden und beschreibt die Herstellung einer Binäruhr mit einem LCD Display. Detalliert beschrieben und mit vielen Erfahrungen erweitert ist vor allem der Beitrag zur Herstellung eines Flüssigkristalldisplays. So haben wir verschiedene Ansätze zur Elektrodenstrukturierung und Oxidierung der leitend beschichteten Glasplatten getestet. Eine Testplatine wurde ebenfalls erstellt, aber noch nicht in Betrieb genommen. Im weiteren Verlauf müssen die Elektronik getestet, das Programm geschrieben und ein Gehäuse hergestellt werden.
-
-Die aufgeführten Erkentnisse vereinfachen die zukünftige Herstellung von LCD Displays enorm und stellen einen großen Informationsgewinn für die Menscheit dar. Denn LCD Displays können äußerst Vielseitig für verschiedenste Anwendungen eingesetzt werden.
-{\b blubberdiblubb}
+Die aufgeführten Erkenntnisse vereinfachen die zukünftige Herstellung von LCDs enorm und stellen einen großen Informationsgewinn für die Menschheit dar. Denn diese Displays können äußerst vielseitig für verschiedenste Anwendungen eingesetzt werden.
 %
 \end{abstract}
