lcd beschreibung zum bild verbessert

--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -4,7 +4,7 @@
 \begin{figure}[t]
   \centering
   \includegraphics[width=\linewidth, keepaspectratio]{Bilder/LCD_layers}
-  \caption{Aufbau eines LCDs mit Polarisationsfolien (Markierung 1 und 5), zwei beschichteten, leitenden Glasplatten (Markierung 2 und 4), den Flüssigkristallen (Markierung 3) und einem Reflektor (Markierung 6) nach FIXME REF}
+  \caption{Aufbau eines LCDs mit Polarisationsfolien (Markierung 1 und 5), zwei beschichteten, leitenden Glasplatten (Markierung 2 und 4), den Flüssigkristallen (Markierung 3) und einem Reflektor (Markierung 6) nach ref[FIXME REF]}
   \label{lcdaufbau}
 \end{figure}
 
