--- a/paper/Kapitel/projektbeschreibung.tex
+++ b/paper/Kapitel/projektbeschreibung.tex
@@ -11,13 +11,8 @@ Die Uhr sollte folgende Eigenschaften aufweisen:
 \end{itemize}
 
 \subsection{Produktionsschritte}
-\subsubsection*{Allgemein}
-\subsubsection*{LCD}
-\subsubsection*{Elektronik}
-\subsubsection*{Programm}
-\subsubsection*{Gehäuse}
 
-
+Bei der Herstellung des Uhr soll wie folgt vorgegangen werden: Zuerst wird das LCD-Display an sich hergestellt. Nach der Fertigstellung der Elektronik wird das Programm geschrieben und das Gehäuse gefertigt. 
 
 \subsection{Vorraussetzungen}
 Werkzeuge, Fablab, usw.
