--- a/paper/Kapitel/ausblick.tex
+++ b/paper/Kapitel/ausblick.tex
@@ -6,7 +6,7 @@ Dieses Kapitel soll einen Ausblick geben, wie die Uhr verbessert und erweitert w
 
 Um rechtzeitig die Batterie wechseln zu können, wäre eine Anzeige denkbar, die als Bild eine leere Batterie anzeigt. Mithilfe der Spannung der Batterie kann die Batterieladung bestimmt werden und ist ein Indikator, wann die Batterien gewechselt werden müssen.\\
 
-Des Weiteren ist denkbar, die Uhr um ein Funkuhrmodul zu erweitern, sodass die Uhrzeit nicht manuell eingestellt werden muss.\\
+Des Weiteren ist denkbar, die Uhr um ein Funkuhrmodul zu erweitern, sodass die Uhrzeit nicht manuell eingestellt werden muss. Zusätzlich ist eine Weckfunktion denkbar.\\
 
 Motiviert durch ein Standardwecker mit LCD, kann ein DC-DC Spannunswandler eingesetzt werden, um die Uhr mit lediglich einer Batterie betreiben zu können. Somit besteht die Möglichkeit, die Größe der Uhr zu verkleinern.
 
@@ -14,4 +14,6 @@ Motiviert durch ein Standardwecker mit LCD, kann ein DC-DC Spannunswandler einge
 
 Eine Möglichkeit wäre es, eine Anzeige für eine selbstgebaute Wetterstation zu designen.\\
 
-Eine weitere Idee ist es, ein Spiel zu entwerfen und ein angepasstes Display dazu zu erstellen.
+Eine weitere Idee ist es, ein Spiel zu entwerfen und ein angepasstes Display dazu zu erstellen.\\
+
+Für ein Eieruhr, um rechtzeitig die Glasplatten, die im Ofen oxidiert werden herauszuholen, kann ein LCD Display verwendet werden.
