--- a/paper/Kapitel/projektbeschreibung.tex
+++ b/paper/Kapitel/projektbeschreibung.tex
@@ -15,4 +15,24 @@ Die Uhr sollte folgende Eigenschaften aufweisen:
 Bei der Herstellung des Uhr soll wie folgt vorgegangen werden: Zuerst wird das LCD-Display an sich hergestellt. Nach der Fertigstellung der Elektronik wird das Programm geschrieben und das Gehäuse gefertigt. 
 
 \subsection{Vorraussetzungen}
-Werkzeuge, Fablab, usw.
+Für die Herstellung der Uhr werden folgende Werkzeuge Maschinen gebraucht:
+\begin{itemize}
+\item Folienplotter
+\item Backofen
+\item Multimeter
+\item Stromversorgung 5 V AC
+
+\end{itemize}
+Folgende Materialien wurden verwendet:
+\begin{itemize}
+\item ITO beschichtete Glasplatten
+\item Aceton
+\item 5 \%ige Salzsäue
+\item Siedesteinchen
+\item Zweikomponentenkleber
+\item Nematische Weitbereichsmischung
+\item Reinigungskonzentrat TODO welches
+\item Polarisationsfolie transparent
+\item 2 Polarisationsfolie (selbstklebend) mit Reflektor
+\item 1 Bogen Abstandshalter 15 µm
+\end{itemize}
