--- a/paper/Kapitel/elektronik.tex
+++ b/paper/Kapitel/elektronik.tex
@@ -52,7 +52,7 @@ Zusammenfassend sind also folgende Ansteuerparameter optimal für die Ansteuerun
 Als Spannungsversorgung könnten somit 2 Standard Batterien mit je 1,5V verwendet werden. Diese sinken durch Entladung auf eine Mindestspannung von 0,9V ab. Dadurch wird die Anzeige nicht bis zur vollen Entladung der Batterien halten. Je nach Wahl des Mikrocontroller kommt dieser auch nicht mit 1,8V Spannung aus. Deshalb haben wir uns entschieden drei Batterien mit je 1,5V einzusetzen.
 
 \subsection{Anbindung}
-Um das LCD Display mit der Ansteuerplatine zu verbinden gibt es mehrere Möglichkeiten. Da nur ein sehr geringer Strom (μA) fließt und eine Spannung von 3V angelegt wird ist nur eine dünne Drahtzuleitung (0,5mm²) von Nöten. Im folgenden werden verschiedene Verfahren erklärt, die wir uns überlegt und zum Teil auh ausprobiert haben.
+Um das LCD Display mit der Ansteuerplatine zu verbinden gibt es mehrere Möglichkeiten. Da nur ein sehr geringer Strom (\(\mu A\)) fließt und eine Spannung von 3V angelegt wird ist nur eine dünne Drahtzuleitung (\(0,5 mm^2\)) von Nöten. Im folgenden werden verschiedene Verfahren erklärt, die wir uns überlegt und zum Teil auch ausprobiert haben.
 
 \subsubsection{Klemmen}
 Im ersten Test wurde das Display über Klemmen angesteuert. Dies hat einwandfrei funktioniert, jedoch beschädigen die Klemmen die Glasplatten und stellen somit keine gute Endlösung dar.
