--- a/paper/Kapitel/projektbeschreibung.tex
+++ b/paper/Kapitel/projektbeschreibung.tex
@@ -34,5 +34,5 @@ Folgende Materialien wurden verwendet:
 \item Reinigungskonzentrat TODO welches
 \item Polarisationsfolie transparent
 \item 2 Polarisationsfolie (selbstklebend) mit Reflektor
-\item 1 Bogen Abstandshalter 15 µm
+\item 1 Bogen Abstandshalter 15 \(\mu m\)
 \end{itemize}
