--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -62,7 +62,34 @@ Das Wegätzen der Indium-Zinn Schicht ist auch durch das Ätzbad möglich, welch
 \end{figure}
 
 \subsection{Oxidierung der Glasplatten}
-Hitze(Ofen), Hitze(Heisluftfön), \(H_2O_2\), \(H_2O_2\) erhitzt
+
+Die Oxidierung der Indium-Zinn Schicht der Glasplatten zu Indium-Zinn-Oxid kann auf mehrere Arten erreicht werden. Im Folgenden werden die Verfahren forgestellt und deren Einsetzbarkeit abgewogen.
+Indikatoren für eine gelungene Oxidierung sind:
+\begin{itemize}
+\item Die für die leitende Schicht typische brauen Färbung muss merklich verschwinden
+\item Eine Messung mittels eines Multimeters muss eine Nennenswerte Änderung der Leitfähigkeit ergeben
+\end{itemize}
+
+\subsubsection{Wasserstoffperoxid}
+
+Die Testplatte wurden in ein Wasserstoffperoxid-Bad gegeben und nach 1h wieder entnommen. Beide oben genannten Indikatoren haben nicht angesprochen, was darauf schließen lässt, dass der Oxidierungsversuch nicht erfolgreich war.
+Nun soll ein Langzeittest über mehrere Tage Erkentnisse geben, ob der Oxidierungsvorgang bei einer längeren Einwirkungsdauer funktioniert. Dies war nicht der Fall.
+
+Somit lässt sich festhalten, dass eine Oxidierung mittels Wasserstoffperoxid bei Raumtemperatur nicht möglich ist.
+
+\subsubsection{Wasserstoffperoxid mit Hitze}
+
+Da die Oxidierung bei Raumtemperatur nicht funktioniert hat wurde ein Versuch gestartet, die Indium-Zinn Schicht in erwärmten Wasserstoffperoxid durchzuführen.
+Keiner der oben genannten Indikatoren wies auf eine Oxidierung hin, weshalb das Verfahren ebenfalls als nicht tauglich eingestuft werden kann.
+
+\subsubsection{Hitze im Ofen}
+
+Ein funktionierendes, aber sehr zeitaufwändiges, Verfahren ist die Oxidierung in einm Ofen. Hierbei kann ein gewöhnlicher Pizzaofen eingesetzt werden. Wir haben den Reflow-Ofen aus dem Fablab hierfür benutzt.
+Bei einer Temperatur werden die Glasplatten mit der beschichteten Seite nach oben auf das Gitter gelegt. Wichtig ist, dass der Ofen maximal leicht vorgeheizt wurde, da zu starke Temperaturunterschiede die Glasplatten zum brechen bringen könnten. Nun wurden die Testplatten für 1:30h im Ofen belassen und anschließend für 30min abkühlen lassen.
+Beide Indikatoren haben angeschlagen was zeigt, dass die Oxidierung erfolgreich war.
+
+Da dies das einzig funktionierende Verfahren ist, wird es zur Herstellung der Displays eingesetzt.
+
 \subsection{Ausrichtung der Glasplatten}
 \subsection{Verkleben und befüllen}
 2-K Kleber, Abstandhalter, Einfüllen des LCD
