--- a/paper/Kapitel/projektbeschreibung.tex
+++ b/paper/Kapitel/projektbeschreibung.tex
@@ -1,6 +1,6 @@
 \section{Projektbeschreibung}
 \subsection{Motivation}
-In diesem Projekt soll eine selbstgebaute Dezimal-Binär-Uhr hergestellt werden. Diese soll mit Batterien und nicht mit Strom betrieben werden, da solche Uhren noch nicht existieren. Hinzu kommt, dass solch eine Uhr energiesparend und kabellos ist. Die Anzeige soll aus einem selbstgebauten Flüssigkristalldisplay (Liquid Crystal Display, LCD) bestehen. Angesteuert wird der Display über einen Microcontroller. Zwei Buttons werden verbaut, um die Uhr Minutengenau einstellen zu können.
+In diesem Projekt soll eine selbstgebaute Dezimal-Binär-Uhr hergestellt werden. Diese soll mit Batterien und ohne Netzanbindung betrieben werden, da solche Uhren noch nicht existieren. Hinzu kommt, dass solch eine Uhr energiesparend und kabellos ist. Die Anzeige soll aus einem selbstgebauten Flüssigkristalldisplay (Liquid Crystal Display, LCD) bestehen. Angesteuert wird der Display über einen Microcontroller. Zwei Buttons werden verbaut, um die Uhr minutengenau einstellen zu können.
 
 \subsection{Spezifikationen}
 Die Uhr sollte folgende Eigenschaften aufweisen:
@@ -15,6 +15,7 @@ Die Uhr sollte folgende Eigenschaften aufweisen:
 Bei der Herstellung des Uhr soll wie folgt vorgegangen werden: Zuerst wird das LCD-Display an sich hergestellt. Nach der Fertigstellung der Elektronik wird das Programm geschrieben und das Gehäuse gefertigt. 
 
 \subsection{Vorraussetzungen}
+%FIXME welche noch
 Für die Herstellung der Uhr werden folgende Werkzeuge Maschinen gebraucht:
 \begin{itemize}
 \item Folienplotter
@@ -27,12 +28,16 @@ Folgende Materialien wurden verwendet:
 \begin{itemize}
 \item ITO beschichtete Glasplatten
 \item Aceton
+%FIXME wie viel
 \item 5 \%ige Salzsäue
 \item Siedesteinchen
 \item Zweikomponentenkleber
-\item Nematische Weitbereichsmischung
-\item Reinigungskonzentrat TODO welches
+\item Nematische Weitbereichsmischung / Flüssigkristall
+%FIXME wie viel
+\item Reinigungskonzentrat
+%FIXME wie viel + welches
 \item Polarisationsfolie transparent
 \item 2 Polarisationsfolie (selbstklebend) mit Reflektor
 \item 1 Bogen Abstandshalter 15 \(\mu m\)
+%FIXME Zigerattenfolien dazuschreiben?
 \end{itemize}
