--- a/paper/Kapitel/projektbeschreibung.tex
+++ b/paper/Kapitel/projektbeschreibung.tex
@@ -20,19 +20,19 @@ Für die Herstellung der Uhr werden folgende Werkzeuge Maschinen gebraucht:
 \item Folienplotter
 \item Backofen
 \item Multimeter
-\item Stromversorgung 5 V AC
+\item Stromversorgung \(5\,\mathrm{V}\) AC
 
 \end{itemize}
 Folgende Materialien wurden verwendet:
 \begin{itemize}
 \item ITO beschichtete Glasplatten
 \item Aceton
-\item 5 \%ige Salzsäue
+\item 5\%-ige Salzsäue
 \item Siedesteinchen
 \item Zweikomponentenkleber
 \item Nematische Weitbereichsmischung
 \item Reinigungskonzentrat TODO welches
 \item Polarisationsfolie transparent
 \item 2 Polarisationsfolie (selbstklebend) mit Reflektor
-\item 1 Bogen Abstandshalter 15 \(\mu m\)
+\item 1 Bogen Abstandshalter \(15\,\mathrm{\mu m}\)
 \end{itemize}
